200 OK http://www.parliament.gh/parliamentarians/56

--- a/www.parliament.gh/4277b2464faa570c0f1efaafd5a29be327076be3.yml
+++ b/www.parliament.gh/4277b2464faa570c0f1efaafd5a29be327076be3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:29:47 GMT
+    - Thu, 17 Nov 2016 16:49:46 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221484420b2fe2b9ac12f7ddb37798c25d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378587%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5fe4ffa0c647bf704d1e006c0090bee7;
-      expires=Thu, 17-Nov-2016 12:29:47 GMT; path=/
-    - csrf_xmen=915e693cac1f4e297ff888d2e35a885c; expires=Thu, 17-Nov-2016 12:29:47
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d27aa8302d940262cabcb104494d1791%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401386%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D17962b260ea407b1c0c66ad445102f27;
+      expires=Thu, 17-Nov-2016 18:49:46 GMT; path=/
+    - csrf_xmen=0841065a02f9748a090fdee99728645d; expires=Thu, 17-Nov-2016 18:49:46
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16485'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:29:48 GMT
+recorded_at: Thu, 17 Nov 2016 16:49:46 GMT
