200 OK http://www.parliament.gh/parliamentarians/376

--- a/www.parliament.gh/de20fd49d4ef46438652ca67a27bb4648426ad01.yml
+++ b/www.parliament.gh/de20fd49d4ef46438652ca67a27bb4648426ad01.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:30:16 GMT
+    - Thu, 17 Nov 2016 16:50:19 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222575d9415c35ad4ca288c382d1e8a433%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378616%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D77de09ee73da72260480f168aeed88ac;
-      expires=Thu, 17-Nov-2016 12:30:16 GMT; path=/
-    - csrf_xmen=b34ad0abb4ead8808cc6be64012032a2; expires=Thu, 17-Nov-2016 12:30:16
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2288883df26418ac4420ad2602639f3983%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401419%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddcaca9ffaff772cb5e652e715aee2a6b;
+      expires=Thu, 17-Nov-2016 18:50:19 GMT; path=/
+    - csrf_xmen=7c8dc1f1ed96832de16e02a62e77a00a; expires=Thu, 17-Nov-2016 18:50:19
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16818'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:30:16 GMT
+recorded_at: Thu, 17 Nov 2016 16:50:19 GMT
