--- a/www.parliament.gh/3168ac61bb525a53a1533053897c271deac550da.yml
+++ b/www.parliament.gh/3168ac61bb525a53a1533053897c271deac550da.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:30:46 GMT
+    - Thu, 17 Nov 2016 16:50:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22446d833ac4c36937dacd8d45e3ceb198%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378646%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D25c37a2daeabac077ad66055f1ea68b8;
-      expires=Thu, 17-Nov-2016 12:30:46 GMT; path=/
-    - csrf_xmen=92db80c579969ac4d07f4a030328c255; expires=Thu, 17-Nov-2016 12:30:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2296b819353cfd11e52739a3a776692685%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401451%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfcab7dc0b47195979420a648a10636ff;
+      expires=Thu, 17-Nov-2016 18:50:51 GMT; path=/
+    - csrf_xmen=e98aeaa0a172285af2ff651e1e5423a2; expires=Thu, 17-Nov-2016 18:50:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16630'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:30:46 GMT
+recorded_at: Thu, 17 Nov 2016 16:50:51 GMT
