200 OK http://www.parliament.gh/parliamentarians/401

--- a/www.parliament.gh/f692571af88dc4f3db4bb1c026fd75acb42fd701.yml
+++ b/www.parliament.gh/f692571af88dc4f3db4bb1c026fd75acb42fd701.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:31:04 GMT
+    - Thu, 17 Nov 2016 16:51:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d98a6d08cb5a8811b017bfe02586b0f1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378664%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D581bc0c3e884c600bbba9f3047910557;
-      expires=Thu, 17-Nov-2016 12:31:04 GMT; path=/
-    - csrf_xmen=5845bc35166800c0ecc210bd112bdf9c; expires=Thu, 17-Nov-2016 12:31:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a949605bd6fbd4a85010ebd48ebd680e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401484%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8ea7dbac2af3cfe933aab14d9eab71a7;
+      expires=Thu, 17-Nov-2016 18:51:24 GMT; path=/
+    - csrf_xmen=1453d3f1a55c3d70db7f141c2d56ed43; expires=Thu, 17-Nov-2016 18:51:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16741'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:31:04 GMT
+recorded_at: Thu, 17 Nov 2016 16:51:24 GMT
