200 OK http://www.parliament.gh/parliamentarians/page/80

--- a/www.parliament.gh/b737508a9d3bf5060051b89bbff5694ce1d418a6.yml
+++ b/www.parliament.gh/b737508a9d3bf5060051b89bbff5694ce1d418a6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:28:31 GMT
+    - Thu, 17 Nov 2016 16:51:41 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=172840c7552eb09a341255827c5572dd; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2254a3b5594eef5807a988ee0e7ee298f1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378511%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D648034830b8c580403fa69e83f9dcde1;
-      expires=Thu, 17-Nov-2016 12:28:31 GMT; path=/
-    - csrf_xmen=8b9daa6769b81f711e22f5a4487ed615; expires=Thu, 17-Nov-2016 12:28:31
+    - PHPSESSID=76ebbbe67888d4e40cad9730a1472305; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b8ba9c3d3b2e1ddf4ac858e44cae3205%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401501%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2f48d652c3e4f90573b3c06639d2b5f9;
+      expires=Thu, 17-Nov-2016 18:51:41 GMT; path=/
+    - csrf_xmen=89df78729eae3bf003d92ab518d8a668; expires=Thu, 17-Nov-2016 18:51:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78228'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:28:31 GMT
+recorded_at: Thu, 17 Nov 2016 16:51:41 GMT
