--- a/www.parliament.gh/7e5e175426e04f1aec7a4d4634bd81a4f35667e5.yml
+++ b/www.parliament.gh/7e5e175426e04f1aec7a4d4634bd81a4f35667e5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:31:24 GMT
+    - Thu, 17 Nov 2016 16:54:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f3c9fe6b9921296f1316e257b87bc654%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378684%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D62ed8e0166e7c3a369e09f31db370061;
-      expires=Thu, 17-Nov-2016 12:31:24 GMT; path=/
-    - csrf_xmen=4ac298987f1f8bfae2edce6e1bcb57de; expires=Thu, 17-Nov-2016 12:31:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22527062ebc1eb490442dc4544b34f7f9e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401657%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D669581571db3c134908f655fb3333aa7;
+      expires=Thu, 17-Nov-2016 18:54:17 GMT; path=/
+    - csrf_xmen=db3d1117ffe34f9b8b28bfff81d3b207; expires=Thu, 17-Nov-2016 18:54:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16623'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:31:24 GMT
+recorded_at: Thu, 17 Nov 2016 16:54:17 GMT
