200 OK http://www.parliament.gh/parliamentarians/108

--- a/www.parliament.gh/c427bd616624db06926ca5a72dcc76aad69792c0.yml
+++ b/www.parliament.gh/c427bd616624db06926ca5a72dcc76aad69792c0.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:31:41 GMT
+    - Thu, 17 Nov 2016 16:54:52 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b0ec146107b4caf06b142a420a90c399%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378701%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da774b7fd6812c2c13edb6d810e800652;
-      expires=Thu, 17-Nov-2016 12:31:41 GMT; path=/
-    - csrf_xmen=b62e30ed80da1cb9061d6bea3b450876; expires=Thu, 17-Nov-2016 12:31:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22082456d7c6c1a249445e1384f6aa1626%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401692%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcbb1ba8f6ec4304fe387ccf4a3a6874c;
+      expires=Thu, 17-Nov-2016 18:54:52 GMT; path=/
+    - csrf_xmen=0cecb365a6e481dd4cf4d6bac2349ce4; expires=Thu, 17-Nov-2016 18:54:52
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16312'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:31:41 GMT
+recorded_at: Thu, 17 Nov 2016 16:54:53 GMT
