200 OK http://www.parliament.gh/parliamentarians/174

--- a/www.parliament.gh/78e033541f1bf094e2a93570fd566edd12a71a83.yml
+++ b/www.parliament.gh/78e033541f1bf094e2a93570fd566edd12a71a83.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:32:07 GMT
+    - Thu, 17 Nov 2016 16:55:19 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22da8c6ae75e048ebfe8c664dee523a9a6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378728%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0e11953c70905fe2918d0ce75f4b6636;
-      expires=Thu, 17-Nov-2016 12:32:08 GMT; path=/
-    - csrf_xmen=c79708ffabfbe3e7b7322eb5c4f315b0; expires=Thu, 17-Nov-2016 12:32:08
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2243c32d389f78f74fcb69745be471496d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401719%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2ccea72fd40b623d718ddb2a89d3c5fe;
+      expires=Thu, 17-Nov-2016 18:55:19 GMT; path=/
+    - csrf_xmen=59ef16ecda6b7e521317251343291522; expires=Thu, 17-Nov-2016 18:55:19
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16689'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:32:08 GMT
+recorded_at: Thu, 17 Nov 2016 16:55:19 GMT
