200 OK http://www.parliament.gh/parliamentarians/123

--- a/www.parliament.gh/9c07912b409e76bac869897b7be6992af3640595.yml
+++ b/www.parliament.gh/9c07912b409e76bac869897b7be6992af3640595.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:32:24 GMT
+    - Thu, 17 Nov 2016 16:55:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a7db305a362aea666958a5e3b1515c1e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378744%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D26421479854df67f69250a7ee4a5b6fc;
-      expires=Thu, 17-Nov-2016 12:32:24 GMT; path=/
-    - csrf_xmen=68ef1d278e746c57aefcda4a70df05e5; expires=Thu, 17-Nov-2016 12:32:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2209e3567f0323c6dfe06666ed7308d92f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401751%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da44b324b06366acd7dd4fb63ff05460f;
+      expires=Thu, 17-Nov-2016 18:55:51 GMT; path=/
+    - csrf_xmen=224162cbc6d648c8c587e03475d1410b; expires=Thu, 17-Nov-2016 18:55:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16461'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:32:25 GMT
+recorded_at: Thu, 17 Nov 2016 16:55:51 GMT
