--- a/www.parliament.gh/756e7a76ad4068c358d5127400337a4a95ec85bf.yml
+++ b/www.parliament.gh/756e7a76ad4068c358d5127400337a4a95ec85bf.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:32:51 GMT
+    - Thu, 17 Nov 2016 16:56:22 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2269a69ded09b40942642027caf3efe22f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378771%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df1a50a35ae988011c9b4fb2c2e2db9bc;
-      expires=Thu, 17-Nov-2016 12:32:51 GMT; path=/
-    - csrf_xmen=bd80f097f6a59168f5e3e9e32fb7396d; expires=Thu, 17-Nov-2016 12:32:51
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222e388fa801d0e0222f35774ac63a10f6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401782%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db39db3c0921bc6f45fe005acc5712d11;
+      expires=Thu, 17-Nov-2016 18:56:22 GMT; path=/
+    - csrf_xmen=ef9978f3395438fb836e929969575c67; expires=Thu, 17-Nov-2016 18:56:22
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16391'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:32:51 GMT
+recorded_at: Thu, 17 Nov 2016 16:56:23 GMT
