200 OK http://www.parliament.gh/parliamentarians/352

--- a/www.parliament.gh/802abd33b712c1eb3bf7f2a83c8239d38c38a1c7.yml
+++ b/www.parliament.gh/802abd33b712c1eb3bf7f2a83c8239d38c38a1c7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:33:10 GMT
+    - Thu, 17 Nov 2016 16:56:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221da977af7f337a0491c00787194f361f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378790%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dda70349273d3cadd52f79fed401a2d46;
-      expires=Thu, 17-Nov-2016 12:33:10 GMT; path=/
-    - csrf_xmen=e5163d5f4937f759da1e06ed15cd07a0; expires=Thu, 17-Nov-2016 12:33:10
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221111677a5deb62826d1c07286995c9f1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401804%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dea68c06ed22bc0742eefa2688405ffe1;
+      expires=Thu, 17-Nov-2016 18:56:44 GMT; path=/
+    - csrf_xmen=e747e5fe829a9003d54597e06eb3880a; expires=Thu, 17-Nov-2016 18:56:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16635'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:33:10 GMT
+recorded_at: Thu, 17 Nov 2016 16:56:45 GMT
