200 OK http://www.parliament.gh/parliamentarians/98

--- a/www.parliament.gh/bb22b77dfebde7f6e1d3b7acb807df21fa1c6e02.yml
+++ b/www.parliament.gh/bb22b77dfebde7f6e1d3b7acb807df21fa1c6e02.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:33:34 GMT
+    - Thu, 17 Nov 2016 16:57:04 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f2bb57d5046fdb08f8231b80ff9324e1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378814%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9dd0f07fb29c66b8dacbf11e80cdcb44;
-      expires=Thu, 17-Nov-2016 12:33:34 GMT; path=/
-    - csrf_xmen=30631ca27c60b6eafa4314bafa8dc02f; expires=Thu, 17-Nov-2016 12:33:34
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a306953be0d2ef8e9427a4ac731b08c9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401824%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df52d3faf678f101b931868d675c3907d;
+      expires=Thu, 17-Nov-2016 18:57:04 GMT; path=/
+    - csrf_xmen=2ef90af14f61729dd91b04293dbd28a7; expires=Thu, 17-Nov-2016 18:57:04
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16740'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:33:34 GMT
+recorded_at: Thu, 17 Nov 2016 16:57:04 GMT
