200 OK http://www.parliament.gh/parliamentarians/126

--- a/www.parliament.gh/dbc9410c329508c4d2bdc9453d83ff4d8aba6ea3.yml
+++ b/www.parliament.gh/dbc9410c329508c4d2bdc9453d83ff4d8aba6ea3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:34:12 GMT
+    - Thu, 17 Nov 2016 16:58:06 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b19c641a43f6625d9b1bf2108043c45b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378852%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4d94b288c171d50c7f8ad4a90df4bb0c;
-      expires=Thu, 17-Nov-2016 12:34:12 GMT; path=/
-    - csrf_xmen=f7119c1d955e7e7712c2ac3533356b22; expires=Thu, 17-Nov-2016 12:34:12
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b3bedfe85aaa52bfdf037b202cbb44b8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401886%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df426a1b9bcfa34112fa00484f19b72db;
+      expires=Thu, 17-Nov-2016 18:58:06 GMT; path=/
+    - csrf_xmen=b44f47e2723bbf29a688ef9407e0571a; expires=Thu, 17-Nov-2016 18:58:06
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17032'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:34:12 GMT
+recorded_at: Thu, 17 Nov 2016 16:58:06 GMT
