--- a/www.parliament.gh/9f54b32b428f644e78b325cdd47ee817932b1f7d.yml
+++ b/www.parliament.gh/9f54b32b428f644e78b325cdd47ee817932b1f7d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:34:34 GMT
+    - Thu, 17 Nov 2016 16:58:42 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226250b7ecb78d7d290d6e7eddb567a730%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378874%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2035e0a577acac72d7ad980e3de260e7;
-      expires=Thu, 17-Nov-2016 12:34:34 GMT; path=/
-    - csrf_xmen=b66c55db4f3174334b07ffe8aae54d2b; expires=Thu, 17-Nov-2016 12:34:34
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22cafa5c3abd38e8887bd429bcca0a7a6e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401922%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5a872835be27a3a9e984c183f89f25fe;
+      expires=Thu, 17-Nov-2016 18:58:42 GMT; path=/
+    - csrf_xmen=55ab05854e174841c07372c7393a002e; expires=Thu, 17-Nov-2016 18:58:42
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16652'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:34:34 GMT
+recorded_at: Thu, 17 Nov 2016 16:58:42 GMT
