200 OK http://www.parliament.gh/parliamentarians/62

--- a/www.parliament.gh/4ff52a33a820801ec03886c148e195d22cfa8858.yml
+++ b/www.parliament.gh/4ff52a33a820801ec03886c148e195d22cfa8858.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:34:52 GMT
+    - Thu, 17 Nov 2016 16:59:16 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ec79078b254fff7257b7c8bd8839ddbf%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378892%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De0d9f20a48b3e9e93201fbc3ebbcd090;
-      expires=Thu, 17-Nov-2016 12:34:52 GMT; path=/
-    - csrf_xmen=a5bc4579eac84786bdae36418248982e; expires=Thu, 17-Nov-2016 12:34:52
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fb9713789af7cb339a1b74fc3439a371%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401956%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4f798b3892e7401c7567055f4955954a;
+      expires=Thu, 17-Nov-2016 18:59:16 GMT; path=/
+    - csrf_xmen=6d06768528417d6bc3399a3df01ba758; expires=Thu, 17-Nov-2016 18:59:16
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16939'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:34:52 GMT
+recorded_at: Thu, 17 Nov 2016 16:59:16 GMT
