200 OK http://www.parliament.gh/parliamentarians/324

--- a/www.parliament.gh/f4d387849301413eacc4aea8ddb6ff79b40016f9.yml
+++ b/www.parliament.gh/f4d387849301413eacc4aea8ddb6ff79b40016f9.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:35:14 GMT
+    - Thu, 17 Nov 2016 16:59:36 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221e5c8733ee59414fd29ab4586964e386%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378914%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D11dd69fed3dfd7156c7aa072892f5672;
-      expires=Thu, 17-Nov-2016 12:35:14 GMT; path=/
-    - csrf_xmen=dce499c381b5e95e0978efd0c9965215; expires=Thu, 17-Nov-2016 12:35:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22541f603c5f4789e52f9c4b39c85d538a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401976%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De55cedfeecd3e39646f2c1a78cdf5e39;
+      expires=Thu, 17-Nov-2016 18:59:36 GMT; path=/
+    - csrf_xmen=8d2c7f6335e5dfd9e337b39936203ecc; expires=Thu, 17-Nov-2016 18:59:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16438'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:35:14 GMT
+recorded_at: Thu, 17 Nov 2016 16:59:36 GMT
