200 OK http://www.parliament.gh/parliamentarians/334

--- a/www.parliament.gh/758fd71a42d6ec55d24fe2c8a573e9db729e288a.yml
+++ b/www.parliament.gh/758fd71a42d6ec55d24fe2c8a573e9db729e288a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:35:36 GMT
+    - Thu, 17 Nov 2016 17:00:08 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22402138a370a19d1dcf24fd203ccbce9e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378936%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8d07d915d314c293b5061c42ebe65a68;
-      expires=Thu, 17-Nov-2016 12:35:36 GMT; path=/
-    - csrf_xmen=6517097eb055f15f55bb6f57a9eb2074; expires=Thu, 17-Nov-2016 12:35:36
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2244210f771ee11e7089c61838bb91b14f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402008%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db14e2463d2a3bb14984f258a72e24e89;
+      expires=Thu, 17-Nov-2016 19:00:08 GMT; path=/
+    - csrf_xmen=24655dda72c5cee56445abe04a7f9e03; expires=Thu, 17-Nov-2016 19:00:08
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16771'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:35:36 GMT
+recorded_at: Thu, 17 Nov 2016 17:00:08 GMT
