200 OK http://www.parliament.gh/parliamentarians/64

--- a/www.parliament.gh/95058565cb9a76a320add6c96dee34c653fe45d2.yml
+++ b/www.parliament.gh/95058565cb9a76a320add6c96dee34c653fe45d2.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:35:52 GMT
+    - Thu, 17 Nov 2016 17:00:26 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e5fb6fcefa954626ab975b8093295c67%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378952%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfbb8ba0b332ceb19a285dff30aee9cfa;
-      expires=Thu, 17-Nov-2016 12:35:52 GMT; path=/
-    - csrf_xmen=9464938b5fee7a049c9ba0e38c4f4ea2; expires=Thu, 17-Nov-2016 12:35:52
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2299461fdf6db2c48c097f298563485894%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402026%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcd27f2514e478499b296f442fb35c587;
+      expires=Thu, 17-Nov-2016 19:00:26 GMT; path=/
+    - csrf_xmen=08a94410903c81dbd39472353593be9f; expires=Thu, 17-Nov-2016 19:00:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16672'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:35:52 GMT
+recorded_at: Thu, 17 Nov 2016 17:00:26 GMT
