--- a/www.parliament.gh/82e5cb567305f01860540999a92f61a81bc8fbeb.yml
+++ b/www.parliament.gh/82e5cb567305f01860540999a92f61a81bc8fbeb.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:38:25 GMT
+    - Thu, 17 Nov 2016 17:00:54 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d3e6aa60164473918f87591573be18cf%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379105%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4c57cdc1624ca1dd6c4aadc800949629;
-      expires=Thu, 17-Nov-2016 12:38:25 GMT; path=/
-    - csrf_xmen=f1197c586ce89748835ee0044573d1c6; expires=Thu, 17-Nov-2016 12:38:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22af5e09ff78e6cb265b5e50ecc5e995dc%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402054%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D52bcac435bdabe438c695faed1d52cd3;
+      expires=Thu, 17-Nov-2016 19:00:54 GMT; path=/
+    - csrf_xmen=e3923d7b275a976cf7e2770a45f060d2; expires=Thu, 17-Nov-2016 19:00:54
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16463'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:38:26 GMT
+recorded_at: Thu, 17 Nov 2016 17:00:55 GMT
