--- a/www.parliament.gh/1e8359b16c584aa2b6cb21faf3bec62a95a8e4cc.yml
+++ b/www.parliament.gh/1e8359b16c584aa2b6cb21faf3bec62a95a8e4cc.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:38:43 GMT
+    - Thu, 17 Nov 2016 17:01:13 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222769318ed61433225cf000c13e18a419%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379123%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6e935b6662cd40045073f278a4b1285e;
-      expires=Thu, 17-Nov-2016 12:38:43 GMT; path=/
-    - csrf_xmen=9560d58a80c68918a40d6b4e44d083a8; expires=Thu, 17-Nov-2016 12:38:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225e058c32b50f145b9004a1e5109bc5fb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402073%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2ad33495e4cef6c259d99b3345762570;
+      expires=Thu, 17-Nov-2016 19:01:13 GMT; path=/
+    - csrf_xmen=488ee3a9e7c541918c4ef250dbea85c8; expires=Thu, 17-Nov-2016 19:01:13
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16665'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:38:44 GMT
+recorded_at: Thu, 17 Nov 2016 17:01:13 GMT
