200 OK http://www.parliament.gh/parliamentarians/413

--- a/www.parliament.gh/b02ee7fd0f6e189ea81989b17de454b7bf44e990.yml
+++ b/www.parliament.gh/b02ee7fd0f6e189ea81989b17de454b7bf44e990.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:39:11 GMT
+    - Thu, 17 Nov 2016 17:01:28 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222d145f6e96f17d1d0edefbab1abf70e5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379151%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc6f2888388f6a984a2c33b5eb59f176d;
-      expires=Thu, 17-Nov-2016 12:39:11 GMT; path=/
-    - csrf_xmen=d3ce986b45e089d7fd447b4755f585bd; expires=Thu, 17-Nov-2016 12:39:11
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222436877483c55159efe1a0b3b25e9105%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402088%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D78afbb13d905e401ba3ff02dcf8d38f6;
+      expires=Thu, 17-Nov-2016 19:01:28 GMT; path=/
+    - csrf_xmen=9bc49384a3bfbad34f3d29832264c875; expires=Thu, 17-Nov-2016 19:01:28
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16352'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:39:11 GMT
+recorded_at: Thu, 17 Nov 2016 17:01:28 GMT
