200 OK http://www.parliament.gh/parliamentarians/298

--- a/www.parliament.gh/ff24d83a1690f966d8d8fb19474906299d3dada3.yml
+++ b/www.parliament.gh/ff24d83a1690f966d8d8fb19474906299d3dada3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:39:27 GMT
+    - Thu, 17 Nov 2016 17:02:01 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ffd1117e1e583a05e2e8d720f1c62ea8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379167%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Def1c670e37ea9d9b8cbd5902df8f06a1;
-      expires=Thu, 17-Nov-2016 12:39:27 GMT; path=/
-    - csrf_xmen=32e695028a8b6cb18bdf722c2bc253bd; expires=Thu, 17-Nov-2016 12:39:27
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f785136fb5fbb9eb002fe1faca138e80%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402121%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9df0f40bd6a91741a5ba4005b044332f;
+      expires=Thu, 17-Nov-2016 19:02:01 GMT; path=/
+    - csrf_xmen=87e16ae8afad5aa2f9ae491edda3d143; expires=Thu, 17-Nov-2016 19:02:01
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16392'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:39:27 GMT
+recorded_at: Thu, 17 Nov 2016 17:02:01 GMT
