--- a/www.parliament.gh/3cd0b0ea14ee442a87a9bb323d35a07ba4a2c99b.yml
+++ b/www.parliament.gh/3cd0b0ea14ee442a87a9bb323d35a07ba4a2c99b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:39:46 GMT
+    - Thu, 17 Nov 2016 17:02:41 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d07612c535461d122e664d5090989ce4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379186%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D95423d181c065dc6f88f7f16ff03027a;
-      expires=Thu, 17-Nov-2016 12:39:46 GMT; path=/
-    - csrf_xmen=97d8b11900a356dc6236b9d75cab9b74; expires=Thu, 17-Nov-2016 12:39:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e40425d2700be25a4c5e99f593de7630%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402161%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De91a87ee5f64ece5830d08de0c018ff3;
+      expires=Thu, 17-Nov-2016 19:02:41 GMT; path=/
+    - csrf_xmen=60caf664420fec7dde5d95364815ae4f; expires=Thu, 17-Nov-2016 19:02:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16455'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:39:46 GMT
+recorded_at: Thu, 17 Nov 2016 17:02:41 GMT
