--- a/www.parliament.gh/29ca22936d9458948e92edfdc17289f08008f0f4.yml
+++ b/www.parliament.gh/29ca22936d9458948e92edfdc17289f08008f0f4.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:40:04 GMT
+    - Thu, 17 Nov 2016 17:03:16 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225ed7d2cb3cad6e033f42f6450a9a8a26%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379204%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9a67f1d1ac1c5159ed97ead45359bf20;
-      expires=Thu, 17-Nov-2016 12:40:04 GMT; path=/
-    - csrf_xmen=baf073ec6618abd4feb4150c49c74ba5; expires=Thu, 17-Nov-2016 12:40:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2254c15ea2724ac718ab9d9162bf3a78e8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402196%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D690a6963d3e5cf5c5c75bef19c8600c5;
+      expires=Thu, 17-Nov-2016 19:03:16 GMT; path=/
+    - csrf_xmen=28774893280cee7601b3867d1f34d0d2; expires=Thu, 17-Nov-2016 19:03:16
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16803'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:40:05 GMT
+recorded_at: Thu, 17 Nov 2016 17:03:16 GMT
