--- a/www.parliament.gh/4e034c5de339c0b07582a09943f12bfcdaace93a.yml
+++ b/www.parliament.gh/4e034c5de339c0b07582a09943f12bfcdaace93a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:38:07 GMT
+    - Thu, 17 Nov 2016 17:03:49 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=279384af65376f053904b5b5a2ffcfb2; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fd23fc9d361498e512f4b0cc4bda1d22%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379087%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D58045bf4c86b7e16d350f38dcbd2b174;
-      expires=Thu, 17-Nov-2016 12:38:07 GMT; path=/
-    - csrf_xmen=41bb5d86b9400afda9260a52e69575d8; expires=Thu, 17-Nov-2016 12:38:07
+    - PHPSESSID=980684efd46f37e4b81aac6c76206b58; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d47652e8f91058a048fb768ba492d37b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402229%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd3fc94132b46c7e05e720e6484390539;
+      expires=Thu, 17-Nov-2016 19:03:49 GMT; path=/
+    - csrf_xmen=f68e92f748452afa40cb51ed60355383; expires=Thu, 17-Nov-2016 19:03:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78137'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:38:08 GMT
+recorded_at: Thu, 17 Nov 2016 17:03:49 GMT
