200 OK http://www.parliament.gh/parliamentarians/387

--- a/www.parliament.gh/14495568435fb6353fb1b5e0821cc2560b2bb86d.yml
+++ b/www.parliament.gh/14495568435fb6353fb1b5e0821cc2560b2bb86d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:40:21 GMT
+    - Thu, 17 Nov 2016 17:07:00 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22078a754369239df6f51de02fb6b4c456%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379221%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9f1a7be92fc73ecbacfec4c3f036b171;
-      expires=Thu, 17-Nov-2016 12:40:21 GMT; path=/
-    - csrf_xmen=ba1a96d2f607b6cedea55f7bf793960f; expires=Thu, 17-Nov-2016 12:40:21
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22eff7b2a7de7987504130bcb6d237614a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402420%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcab01f66edb1e4294f61c665d144b5fe;
+      expires=Thu, 17-Nov-2016 19:07:00 GMT; path=/
+    - csrf_xmen=8870742d5a986ebbf63c444181e8bdfb; expires=Thu, 17-Nov-2016 19:07:00
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16473'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:40:22 GMT
+recorded_at: Thu, 17 Nov 2016 17:07:00 GMT
