200 OK http://www.parliament.gh/parliamentarians/411

--- a/www.parliament.gh/a3b09d329d1818df1747755f0e2f9fcb19ae99b7.yml
+++ b/www.parliament.gh/a3b09d329d1818df1747755f0e2f9fcb19ae99b7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:40:45 GMT
+    - Thu, 17 Nov 2016 17:07:15 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2256e0550591075f57192e793e442ab156%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379245%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3d7257cbb0352306f16add7d344d9cbc;
-      expires=Thu, 17-Nov-2016 12:40:45 GMT; path=/
-    - csrf_xmen=9aa986111e82cb3bec4e5de4b4c6e7c4; expires=Thu, 17-Nov-2016 12:40:45
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a5ce96fd2db8aa81a88ab42b8606e3d8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402435%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D461ad659ccee96c04ca9df2a481c416c;
+      expires=Thu, 17-Nov-2016 19:07:15 GMT; path=/
+    - csrf_xmen=623e0d6c8c22dc43791476718607b855; expires=Thu, 17-Nov-2016 19:07:15
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '15920'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:40:45 GMT
+recorded_at: Thu, 17 Nov 2016 17:07:16 GMT
