200 OK http://www.parliament.gh/parliamentarians/26

--- a/www.parliament.gh/40bc44a2a55430b520894f8087f919851ffdad57.yml
+++ b/www.parliament.gh/40bc44a2a55430b520894f8087f919851ffdad57.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:41:01 GMT
+    - Thu, 17 Nov 2016 17:07:37 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b0fe2c13cf0847f493d4bcb449c66f7b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379262%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D41479da712d7870828a961c658d41152;
-      expires=Thu, 17-Nov-2016 12:41:02 GMT; path=/
-    - csrf_xmen=264789d47922d0bc5ae0d2be463aa44e; expires=Thu, 17-Nov-2016 12:41:01
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2232be31a59f2164db320331cb8758cbfb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402457%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df38658ee9ba19fa7768bf1f873b77119;
+      expires=Thu, 17-Nov-2016 19:07:37 GMT; path=/
+    - csrf_xmen=8df48d5b7295b767debabe169b13c11c; expires=Thu, 17-Nov-2016 19:07:37
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16686'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:41:02 GMT
+recorded_at: Thu, 17 Nov 2016 17:07:37 GMT
