--- a/www.parliament.gh/b265e33503ad36f7c8400504609270ea95e4f2a6.yml
+++ b/www.parliament.gh/b265e33503ad36f7c8400504609270ea95e4f2a6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:41:23 GMT
+    - Thu, 17 Nov 2016 17:07:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2212a0b91672786807c050b5102d4c069c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379283%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7b5f676c75c05f54a71a48541faf50ed;
-      expires=Thu, 17-Nov-2016 12:41:23 GMT; path=/
-    - csrf_xmen=68e998b28a72f3e8664ec108db644c6d; expires=Thu, 17-Nov-2016 12:41:23
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22cafd936dc307c6c3ce67258e81584b16%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402471%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Daaddee57b94a6c0996744fc14e9d8d95;
+      expires=Thu, 17-Nov-2016 19:07:51 GMT; path=/
+    - csrf_xmen=774bc21e167c5b8ce8d5a0d80d98687b; expires=Thu, 17-Nov-2016 19:07:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17000'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:41:23 GMT
+recorded_at: Thu, 17 Nov 2016 17:07:51 GMT
