--- a/www.parliament.gh/98bf9282b0a0037df898e90be1a625dd706e9b9c.yml
+++ b/www.parliament.gh/98bf9282b0a0037df898e90be1a625dd706e9b9c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:41:49 GMT
+    - Thu, 17 Nov 2016 17:08:06 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e66c2dc94ba64e83d94ec07d5e797f00%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379309%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da2f14e6dce026d22a2b0e09ed055c0ea;
-      expires=Thu, 17-Nov-2016 12:41:49 GMT; path=/
-    - csrf_xmen=7481efdff38bb6560540079a9898c32c; expires=Thu, 17-Nov-2016 12:41:49
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222ae9c0888dd5488c280341dbc0cd16d2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402486%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfab344f956853cff2fcb22bae6cabecf;
+      expires=Thu, 17-Nov-2016 19:08:06 GMT; path=/
+    - csrf_xmen=00e5d1455b588bf5ad346251cd93ab72; expires=Thu, 17-Nov-2016 19:08:06
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16523'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:41:49 GMT
+recorded_at: Thu, 17 Nov 2016 17:08:07 GMT
