200 OK http://www.parliament.gh/parliamentarians/297

--- a/www.parliament.gh/6da46488f234e9d07d0e0ad62e1b91463565d016.yml
+++ b/www.parliament.gh/6da46488f234e9d07d0e0ad62e1b91463565d016.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:42:05 GMT
+    - Thu, 17 Nov 2016 17:08:31 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b2a7b62451bf31ba74d877f0a233e7ae%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379325%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc55ec61b22090134048b5657d592b1c7;
-      expires=Thu, 17-Nov-2016 12:42:05 GMT; path=/
-    - csrf_xmen=3858e6b4560c51400b44158e10ca7607; expires=Thu, 17-Nov-2016 12:42:05
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2284fee8f7ca004350ffb5329c7e74035d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402511%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D25752f10310b34447dfffabb6e7e0b40;
+      expires=Thu, 17-Nov-2016 19:08:31 GMT; path=/
+    - csrf_xmen=0bf1c870606cc09ba81e365755ba230e; expires=Thu, 17-Nov-2016 19:08:31
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16361'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:42:05 GMT
+recorded_at: Thu, 17 Nov 2016 17:08:31 GMT
