--- a/www.parliament.gh/2098bdc340877f5a221e24baec901d45450ef173.yml
+++ b/www.parliament.gh/2098bdc340877f5a221e24baec901d45450ef173.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:42:27 GMT
+    - Thu, 17 Nov 2016 17:09:04 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2286b3b2c48fa0416454c53aa2c2849af3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379347%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D575064e914d07fecaee25f14f774691c;
-      expires=Thu, 17-Nov-2016 12:42:27 GMT; path=/
-    - csrf_xmen=676c5b0625d512f686d059d573add32e; expires=Thu, 17-Nov-2016 12:42:27
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225f6c106f6d3d933e0b45f3e77da32b5b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402544%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D21addec5bdb001092cf923af1ab26581;
+      expires=Thu, 17-Nov-2016 19:09:04 GMT; path=/
+    - csrf_xmen=504b01ab336c66a276836f787c11915b; expires=Thu, 17-Nov-2016 19:09:04
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16499'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:42:27 GMT
+recorded_at: Thu, 17 Nov 2016 17:09:04 GMT
