--- a/www.parliament.gh/2fab5d53ff51ab5cc8427adb76677bf8b3c38ddb.yml
+++ b/www.parliament.gh/2fab5d53ff51ab5cc8427adb76677bf8b3c38ddb.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:42:43 GMT
+    - Thu, 17 Nov 2016 17:09:20 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2289b114d61d9a8ed9b1bc55ca9b7c82b1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379363%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1b6e68a7cf7198617886225a5f7fea9f;
-      expires=Thu, 17-Nov-2016 12:42:43 GMT; path=/
-    - csrf_xmen=edcab01ed71b3ed6074be563ccb4633a; expires=Thu, 17-Nov-2016 12:42:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b82e32ddeee0b19b021dbdcb687d4e1e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402560%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3b18261089c44e00ba57fdd79a60f51d;
+      expires=Thu, 17-Nov-2016 19:09:20 GMT; path=/
+    - csrf_xmen=5eac298754dd5997355c967df3ed0bde; expires=Thu, 17-Nov-2016 19:09:20
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16595'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:42:43 GMT
+recorded_at: Thu, 17 Nov 2016 17:09:20 GMT
