200 OK http://www.parliament.gh/parliamentarians/240

--- a/www.parliament.gh/76d72a1fb909cd8c81bbf4fc6aa34c827b90badc.yml
+++ b/www.parliament.gh/76d72a1fb909cd8c81bbf4fc6aa34c827b90badc.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:43:00 GMT
+    - Thu, 17 Nov 2016 17:09:54 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e4ecd26e9d348c508812a60ad36900cb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379380%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D466fe61b802870bb637b4366e80be3d0;
-      expires=Thu, 17-Nov-2016 12:43:00 GMT; path=/
-    - csrf_xmen=198beeb7b2df408d0235471df5d3b6a9; expires=Thu, 17-Nov-2016 12:43:00
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ab5035777d0740763b5b049b07ac0ecb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402594%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfee67e7378135b3fe78cf55f942f3bfa;
+      expires=Thu, 17-Nov-2016 19:09:54 GMT; path=/
+    - csrf_xmen=85fb8eafa948c170886c952a6331225a; expires=Thu, 17-Nov-2016 19:09:54
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16645'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:43:00 GMT
+recorded_at: Thu, 17 Nov 2016 17:09:54 GMT
