--- a/www.parliament.gh/012b24c0fff8e6e6ba10c7f902b6ea0a255be46f.yml
+++ b/www.parliament.gh/012b24c0fff8e6e6ba10c7f902b6ea0a255be46f.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:43:17 GMT
+    - Thu, 17 Nov 2016 17:10:30 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2211d0fdc5ae1bbf811680e95c88a5bdd5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379397%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De94c7da93976f26f670eabecad0a977f;
-      expires=Thu, 17-Nov-2016 12:43:17 GMT; path=/
-    - csrf_xmen=08a24319800a7b132c041ba52338cf3a; expires=Thu, 17-Nov-2016 12:43:17
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2220ef2978170a4fb81eeb96bf380ad88c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402630%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbfe26e536a9edbeeae92b4146372a54e;
+      expires=Thu, 17-Nov-2016 19:10:30 GMT; path=/
+    - csrf_xmen=e4b780de1c6214a74cc6551a4ed97aa0; expires=Thu, 17-Nov-2016 19:10:30
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16839'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:43:17 GMT
+recorded_at: Thu, 17 Nov 2016 17:10:31 GMT
