--- a/www.parliament.gh/f380cf651194002b14e23ce73e6549d07f19d8bd.yml
+++ b/www.parliament.gh/f380cf651194002b14e23ce73e6549d07f19d8bd.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:43:40 GMT
+    - Thu, 17 Nov 2016 17:10:50 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d917258f029aa87831affb57720eb8b0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379421%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0e82d47a3d39801c5bfa9dcf4718adee;
-      expires=Thu, 17-Nov-2016 12:43:41 GMT; path=/
-    - csrf_xmen=11b31f43fe94b034dcd5e6af0436bb5a; expires=Thu, 17-Nov-2016 12:43:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f393f1660c8080b99ea732721acc8fac%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402650%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D865e8d686e9b5b1eb7dfe6e87d333184;
+      expires=Thu, 17-Nov-2016 19:10:50 GMT; path=/
+    - csrf_xmen=2d7bd9e9ed4826103eab7bf4f1fed405; expires=Thu, 17-Nov-2016 19:10:50
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16542'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:43:41 GMT
+recorded_at: Thu, 17 Nov 2016 17:10:50 GMT
