200 OK http://www.parliament.gh/parliamentarians/138

--- a/www.parliament.gh/b14a1b133f97232637a0056b7d82c52781a41d62.yml
+++ b/www.parliament.gh/b14a1b133f97232637a0056b7d82c52781a41d62.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:44:00 GMT
+    - Thu, 17 Nov 2016 17:11:06 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22980e6fca5c8fc4d62cac8c3c776e20b4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379440%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8cbdc1331fac190e551c8cc342290fd3;
-      expires=Thu, 17-Nov-2016 12:44:00 GMT; path=/
-    - csrf_xmen=516397781b3d1f4a2f1a771f23c9b388; expires=Thu, 17-Nov-2016 12:44:00
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d886939f01a492706d2cc90005aab6e5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402666%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da1b8fc692f8e68761cb0df80465bd6e8;
+      expires=Thu, 17-Nov-2016 19:11:06 GMT; path=/
+    - csrf_xmen=edd7fac1994d9266370b47a4ff045b2c; expires=Thu, 17-Nov-2016 19:11:06
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '20130'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:44:00 GMT
+recorded_at: Thu, 17 Nov 2016 17:11:06 GMT
