--- a/www.parliament.gh/064ca5b866e90d10284d68a2a26944cd34b8c22e.yml
+++ b/www.parliament.gh/064ca5b866e90d10284d68a2a26944cd34b8c22e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:44:16 GMT
+    - Thu, 17 Nov 2016 17:11:42 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b4129d421a05664918b256a283fc0b17%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379456%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2c4442c2c363936cf01257a1ccbbf463;
-      expires=Thu, 17-Nov-2016 12:44:16 GMT; path=/
-    - csrf_xmen=3189cf20193786845da4dfbefe398821; expires=Thu, 17-Nov-2016 12:44:16
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2217713f80b952a7f404a878c521b64c56%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402702%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D176ae3799e58b716c55a75a4b9d4cc36;
+      expires=Thu, 17-Nov-2016 19:11:42 GMT; path=/
+    - csrf_xmen=feb7ac8f4958b671fdf374e9ce8d7d7f; expires=Thu, 17-Nov-2016 19:11:42
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16366'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:44:17 GMT
+recorded_at: Thu, 17 Nov 2016 17:11:43 GMT
