200 OK http://www.parliament.gh/parliamentarians/398

--- a/www.parliament.gh/4686efdcc1d8a630a8e7408f1439e72fc51e870a.yml
+++ b/www.parliament.gh/4686efdcc1d8a630a8e7408f1439e72fc51e870a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:44:32 GMT
+    - Thu, 17 Nov 2016 17:12:12 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b2791aeb740f18489ba23b7195260777%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379472%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5354ca92b5028b72aff62c4072c97960;
-      expires=Thu, 17-Nov-2016 12:44:32 GMT; path=/
-    - csrf_xmen=ffc651492a74423bed996841b08cb8df; expires=Thu, 17-Nov-2016 12:44:32
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228ba778c9df6d0361b5221180f150edb0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402732%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9733590d60d2d1024c108741692a25d0;
+      expires=Thu, 17-Nov-2016 19:12:12 GMT; path=/
+    - csrf_xmen=74d1275ea2744dec0138b8f671eaa117; expires=Thu, 17-Nov-2016 19:12:12
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16701'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:44:32 GMT
+recorded_at: Thu, 17 Nov 2016 17:12:13 GMT
