--- a/www.parliament.gh/07d031942cc3a4a9bb3b86fa32f7684b9757f99c.yml
+++ b/www.parliament.gh/07d031942cc3a4a9bb3b86fa32f7684b9757f99c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:47:02 GMT
+    - Thu, 17 Nov 2016 17:12:36 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2201b34f3d83d7104355e6a44cce423f1c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379622%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5d663e60972af032154291a634585335;
-      expires=Thu, 17-Nov-2016 12:47:02 GMT; path=/
-    - csrf_xmen=3d0d1a808819343f6f17a49121bec800; expires=Thu, 17-Nov-2016 12:47:02
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226fd3d66ff7be24f4dfe63cc75b381f4d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402756%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd35eccb3417bc769f7e0b63411ecfe94;
+      expires=Thu, 17-Nov-2016 19:12:36 GMT; path=/
+    - csrf_xmen=0d829db46feb8c72731f290fb9adbb56; expires=Thu, 17-Nov-2016 19:12:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16494'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:47:03 GMT
+recorded_at: Thu, 17 Nov 2016 17:12:36 GMT
